[package]
name = "seed-runtime"
version = "0.1.0"
authors = ["The Root Network Team"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false, optional = true, features = ["derive"] }

# Substrate
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-multisig = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# EVM support
fp-rpc = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
fp-self-contained = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
evm = { version = "0.36.0", default-features = false, features = ["with-codec"] }

hex={ version = "0.4.3", default-features= false }
hex-literal = { version = "0.3.4", default-features = false }
pallet-base-fee = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-ethereum = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-evm-chain-id = { path = "../pallet/evm-chain-id", default-features = false }
pallet-evm-precompile-blake2 = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
precompile-utils = { path = "../evm-precompiles/utils", default-features = false }
pallet-evm-precompiles-erc721 = { path = "../evm-precompiles/erc721", default-features = false }
pallet-evm-precompiles-erc1155 = { path = "../evm-precompiles/erc1155", default-features = false }
pallet-evm-precompiles-erc20 = { path = "../evm-precompiles/erc20", default-features = false }
pallet-evm-precompiles-nft = { path = "../evm-precompiles/nft", default-features = false }
pallet-evm-precompiles-sft = { path = "../evm-precompiles/sft", default-features = false }
pallet-evm-precompiles-peg = { path = "../evm-precompiles/peg", default-features = false }
pallet-evm-precompiles-dex = { path = "../evm-precompiles/dex", default-features = false }
pallet-evm-precompiles-futurepass = { path = "../evm-precompiles/futurepass", default-features = false }
pallet-evm-precompiles-futurepass-registrar = { path = "../evm-precompiles/futurepass_registrar", default-features = false }
pallet-evm-precompiles-marketplace = { path = "../evm-precompiles/marketplace", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
doughnut-rs = { git = "https://github.com/futureversecom/trn-doughnut-rs", branch = "chore/toppings", default-features = false }
#doughnut-rs = { path = "../../../trn-doughnut-rs", default-features = false, features = ["crypto"] }
trn-pact = { version = "0.1.0", default-features = false }

pallet-assets-ext = { path = "../pallet/assets-ext", default-features = false }
pallet-assets-ext-rpc-runtime-api = { path = "../pallet/assets-ext/rpc/runtime-api", default-features = false }
pallet-dex = { path = "../pallet/dex", default-features = false }
pallet-dex-rpc-runtime-api = { path = "../pallet/dex/rpc/runtime-api", default-features = false }
pallet-echo = { path = "../pallet/echo", default-features = false }
pallet-ethy = { path = "../pallet/ethy", default-features = false }
pallet-fee-proxy = { path = "../pallet/fee-proxy", default-features = false }
pallet-nft = { path = "../pallet/nft", default-features = false }
pallet-nft-rpc-runtime-api = { path = "../pallet/nft/rpc/runtime-api", default-features = false }
pallet-sft = { path = "../pallet/sft", default-features = false }
pallet-sft-rpc-runtime-api = { path = "../pallet/sft/rpc/runtime-api", default-features = false }
pallet-token-approvals = { path = "../pallet/token-approvals", default-features = false }
pallet-tx-fee-pot = { path = "../pallet/tx-fee-pot", default-features = false }
pallet-xrpl-bridge = { path = "../pallet/xrpl-bridge", default-features = false }
pallet-erc20-peg = { path = "../pallet/erc20-peg", default-features = false }
pallet-nft-peg = { path = "../pallet/nft-peg", default-features = false }
pallet-fee-control = { path = "../pallet/fee-control", default-features = false }
pallet-xls20 = { path = "../pallet/xls20", default-features = false }
pallet-futurepass = { path = "../pallet/futurepass", default-features = false }
pallet-marketplace = { path = "../pallet/marketplace", default-features = false }
pallet-vortex = { path = "../pallet/vortex-distribution", default-features = false }
pallet-doughnut = { path = "../pallet/doughnut", default-features = false }
pallet-maintenance-mode = { path = "../pallet/maintenance-mode", default-features = false }

seed-pallet-common = { path = "../pallet/common", default-features = false }
seed-primitives = { path = "../primitives", default-features = false }
seed-runtime-constants = { path = "constants", default-features = false }
primitive-types = {version = "0.11.1", default-features = false, features = ["impl-codec", "impl-serde"] }

# Try-runtime
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }

# Benchmark dependencies
frame-benchmarking  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }
frame-system-benchmarking  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }
pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[dev-dependencies]
ethereum = { version = "0.12.0", features = ["with-codec"] }
seed-client = { path = "../client" }
ethabi = { version = "17.1.0" }
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
tokio = { version = "1.19.2", features = ["macros"] }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-externalities  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"frame-executive/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-try-runtime/std",
	"pallet-authorship/std",
	"pallet-assets/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-echo/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	'pallet-multisig/std',
	"pallet-nomination-pools/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-utility/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"seed-pallet-common/std",
	"pallet-assets-ext/std",
	"pallet-assets-ext-rpc-runtime-api/std",
	"pallet-dex/std",
	"pallet-dex-rpc-runtime-api/std",
	"pallet-ethy/std",
	"pallet-fee-proxy/std",
	"pallet-nft/std",
	"pallet-nft-rpc-runtime-api/std",
	"pallet-sft/std",
	"pallet-sft-rpc-runtime-api/std",
	"pallet-xrpl-bridge/std",
	"pallet-tx-fee-pot/std",
	"pallet-token-approvals/std",
	"pallet-xls20/std",
	"pallet-futurepass/std",
	"pallet-marketplace/std",
	"pallet-vortex/std",
	"pallet-maintenance-mode/std",
	"seed-primitives/std",
	"primitive-types/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompiles-erc721/std",
	"pallet-evm-precompiles-erc1155/std",
	"pallet-evm-precompiles-erc20/std",
	"pallet-evm-precompiles-nft/std",
	"pallet-evm-precompiles-sft/std",
	"pallet-evm-precompiles-peg/std",
	"pallet-evm-precompiles-marketplace/std",
	"pallet-evm-precompiles-dex/std",
	"pallet-evm-precompiles-futurepass/std",
	"pallet-evm-precompiles-futurepass-registrar/std",
	"pallet-fee-control/std",
	"precompile-utils/std",
	"rustc-hex/std",
	"pallet-erc20-peg/std",
	"pallet-nft-peg/std",
	"evm/std",
	"try-runtime-cli",
	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",
	"pallet-session-benchmarking?/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-preimage/std",
	"pallet-doughnut/std",
	"doughnut-rs/std",
	"trn-pact/std",
]

try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-ethereum/try-runtime",
	# "pallet-base-fee/try-runtime",
	# Local
	"pallet-assets-ext/try-runtime",
	"pallet-dex/try-runtime",
	"pallet-nft/try-runtime",
	"pallet-sft/try-runtime",
	"pallet-xrpl-bridge/try-runtime",
	"pallet-token-approvals/try-runtime",
	"pallet-echo/try-runtime",
	"pallet-tx-fee-pot/try-runtime",
	"pallet-ethy/try-runtime",
	"pallet-erc20-peg/try-runtime",
	"pallet-nft-peg/try-runtime",
	"pallet-xls20/try-runtime",
	"pallet-futurepass/try-runtime",
	"pallet-marketplace/try-runtime",
	"pallet-vortex/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-fee-control/try-runtime",
	"pallet-fee-proxy/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"pallet-maintenance-mode/try-runtime",
	"pallet-doughnut/try-runtime",
]

runtime-benchmarks = [
	# Substrate
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	# Local
	"pallet-nft/runtime-benchmarks",
	"pallet-sft/runtime-benchmarks",
	"pallet-xrpl-bridge/runtime-benchmarks",
	"pallet-dex/runtime-benchmarks",
	"pallet-fee-control/runtime-benchmarks",
	"pallet-nft-peg/runtime-benchmarks",
	"pallet-erc20-peg/runtime-benchmarks",
	"pallet-echo/runtime-benchmarks",
	"pallet-assets-ext/runtime-benchmarks",
	"pallet-evm-chain-id/runtime-benchmarks",
	"pallet-token-approvals/runtime-benchmarks",
	"pallet-xls20/runtime-benchmarks",
	"pallet-futurepass/runtime-benchmarks",
	"pallet-marketplace/runtime-benchmarks",
	"pallet-vortex/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-fee-proxy/runtime-benchmarks",
	"pallet-maintenance-mode/runtime-benchmarks",
	"pallet-doughnut/runtime-benchmarks"
]
