[package]
name = "seed-runtime"
version = "0.1.0"
authors = ["The Root Network Team"]
edition = "2021"

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-executive = { workspace = true }
frame-election-provider-support = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-assets = { workspace = true }
pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-balances = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-im-online = { workspace = true }
pallet-liquidity-pools = { workspace = true }
pallet-multisig = { workspace = true }
pallet-nomination-pools = { workspace = true }
pallet-offences = { workspace = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-recovery = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-npos-elections = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# EVM support
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true }
evm = { workspace = true }
pallet-base-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-blake2 = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompiles-erc721 = { workspace = true }
pallet-evm-precompiles-erc1155 = { workspace = true }
pallet-evm-precompiles-erc20 = { workspace = true }
pallet-evm-precompiles-nft = { workspace = true }
pallet-evm-precompiles-sft = { workspace = true }
pallet-evm-precompiles-peg = { workspace = true }
pallet-evm-precompiles-dex = { workspace = true }
pallet-evm-precompiles-futurepass = { workspace = true }
pallet-evm-precompiles-futurepass-registrar = { workspace = true }
pallet-evm-precompiles-marketplace = { workspace = true }
precompile-utils = { workspace = true }

pallet-assets-ext = { workspace = true }
pallet-assets-ext-rpc-runtime-api = { workspace = true }
pallet-dex = { workspace = true }
pallet-dex-rpc-runtime-api = { workspace = true }
pallet-echo = { workspace = true }
pallet-ethy = { workspace = true }
pallet-fee-proxy = { workspace = true }
pallet-nfi = { workspace = true }
pallet-nft = { workspace = true }
pallet-nft-rpc-runtime-api = { workspace = true }
pallet-sft = { workspace = true }
pallet-sylo-data-verification = { workspace = true }
pallet-sylo-data-permissions = { workspace = true }
pallet-sylo-data-permissions-rpc-runtime-api = { workspace = true }
pallet-sft-rpc-runtime-api = { workspace = true }
pallet-token-approvals = { workspace = true }
pallet-tx-fee-pot = { workspace = true }
pallet-xrpl-bridge = { workspace = true }
pallet-xrpl = { workspace = true }
pallet-erc20-peg = { workspace = true }
pallet-nft-peg = { workspace = true }
pallet-fee-control = { workspace = true }
pallet-xls20 = { workspace = true }
pallet-futurepass = { workspace = true }
pallet-marketplace = { workspace = true }
pallet-vortex-distribution = { workspace = true }
pallet-partner-attribution = { workspace = true }
pallet-doughnut = { workspace = true }
pallet-maintenance-mode = { workspace = true }
pallet-crowdsale = { workspace = true }
pallet-migration = { workspace = true }
pallet-sylo-action-permissions = { workspace = true }

seed-pallet-common = { workspace = true }
seed-primitives = { workspace = true }
seed-runtime-constants = { workspace = true }

# External deps
hex = { workspace = true  }
hex-literal = { workspace = true }
rustc-hex = { workspace = true }
doughnut-rs = { workspace = true }
trn-pact = { version = "0.2.1", default-features = false }

# Try-runtime
frame-try-runtime = { workspace = true, optional = true }
try-runtime-cli = { workspace = true, optional = true }

# Benchmark dependencies
frame-benchmarking  = { workspace = true, optional = true }
frame-system-benchmarking  = { workspace = true, optional = true }
pallet-session-benchmarking = { workspace = true,  optional = true }
pallet-election-provider-support-benchmarking = { workspace = true,  optional = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, default-features = true }

[dev-dependencies]
seed-client = { workspace = true }
ethabi = { workspace = true }
substrate-test-runtime-client = { workspace = true }
tokio = { workspace = true }
ethereum = { version = "0.14.0", default-features = false }
frame-remote-externalities = { workspace = true }
sp-externalities  = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-try-runtime/std",
	"pallet-authorship/std",
	"pallet-assets/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-echo/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	'pallet-multisig/std',
	"pallet-nomination-pools/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-utility/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"seed-pallet-common/std",
	"pallet-assets-ext/std",
	"pallet-assets-ext-rpc-runtime-api/std",
	"pallet-dex/std",
	"pallet-dex-rpc-runtime-api/std",
	"pallet-ethy/std",
	"pallet-fee-proxy/std",
	"pallet-nfi/std",
	"pallet-liquidity-pools/std",
	"pallet-nft/std",
	"pallet-nft-rpc-runtime-api/std",
	"pallet-sft/std",
	"pallet-sft-rpc-runtime-api/std",
	"pallet-sylo-data-verification/std",
	"pallet-sylo-data-permissions/std",
	"pallet-sylo-data-permissions-rpc-runtime-api/std",
	"pallet-xrpl-bridge/std",
	"pallet-xrpl/std",
	"pallet-tx-fee-pot/std",
	"pallet-token-approvals/std",
	"pallet-xls20/std",
	"pallet-futurepass/std",
	"pallet-marketplace/std",
	"pallet-vortex-distribution/std",
	"pallet-partner-attribution/std",
	"pallet-maintenance-mode/std",
	"pallet-crowdsale/std",
	"pallet-migration/std",
	"seed-primitives/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompiles-erc721/std",
	"pallet-evm-precompiles-erc1155/std",
	"pallet-evm-precompiles-erc20/std",
	"pallet-evm-precompiles-nft/std",
	"pallet-evm-precompiles-sft/std",
	"pallet-evm-precompiles-peg/std",
	"pallet-evm-precompiles-marketplace/std",
	"pallet-evm-precompiles-dex/std",
	"pallet-evm-precompiles-futurepass/std",
	"pallet-evm-precompiles-futurepass-registrar/std",
	"pallet-fee-control/std",
	"precompile-utils/std",
	"rustc-hex/std",
	"pallet-erc20-peg/std",
	"pallet-nft-peg/std",
	"evm/std",
	"try-runtime-cli",
	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",
	"pallet-session-benchmarking?/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-preimage/std",
	"pallet-doughnut/std",
	"doughnut-rs/std",
	"trn-pact/std",
]

try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-ethereum/try-runtime",
	"fp-self-contained/try-runtime",
	# "pallet-base-fee/try-runtime",
	# Local
	"pallet-assets-ext/try-runtime",
	"pallet-dex/try-runtime",
	"pallet-nfi/try-runtime",
	"pallet-liquidity-pools/try-runtime",
	"pallet-nft/try-runtime",
	"pallet-sft/try-runtime",
	"pallet-sylo-data-verification/try-runtime",
	"pallet-sylo-data-permissions/try-runtime",
	"pallet-xrpl-bridge/try-runtime",
	"pallet-xrpl/try-runtime",
	"pallet-token-approvals/try-runtime",
	"pallet-echo/try-runtime",
	"pallet-tx-fee-pot/try-runtime",
	"pallet-ethy/try-runtime",
	"pallet-erc20-peg/try-runtime",
	"pallet-nft-peg/try-runtime",
	"pallet-xls20/try-runtime",
	"pallet-futurepass/try-runtime",
	"pallet-marketplace/try-runtime",
	"pallet-vortex-distribution/try-runtime",
	"pallet-partner-attribution/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-fee-control/try-runtime",
	"pallet-fee-proxy/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"pallet-doughnut/try-runtime",
	"pallet-maintenance-mode/try-runtime",
	"pallet-crowdsale/try-runtime",
	"pallet-migration/try-runtime",
]

runtime-benchmarks = [
	# Substrate
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	# Local
	"pallet-nfi/runtime-benchmarks",
	"pallet-nft/runtime-benchmarks",
	"pallet-sft/runtime-benchmarks",
	"pallet-sylo-data-verification/runtime-benchmarks",
	"pallet-sylo-data-permissions/runtime-benchmarks",
	"pallet-xrpl-bridge/runtime-benchmarks",
	"pallet-xrpl/runtime-benchmarks",
	"pallet-dex/runtime-benchmarks",
	"pallet-liquidity-pools/runtime-benchmarks",
	"pallet-fee-control/runtime-benchmarks",
	"pallet-nft-peg/runtime-benchmarks",
	"pallet-erc20-peg/runtime-benchmarks",
	"pallet-ethy/runtime-benchmarks",
	"pallet-echo/runtime-benchmarks",
	"pallet-assets-ext/runtime-benchmarks",
	"pallet-evm-chain-id/runtime-benchmarks",
	"pallet-token-approvals/runtime-benchmarks",
	"pallet-xls20/runtime-benchmarks",
	"pallet-futurepass/runtime-benchmarks",
	"pallet-marketplace/runtime-benchmarks",
	"pallet-vortex-distribution/runtime-benchmarks",
	"pallet-partner-attribution/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-fee-proxy/runtime-benchmarks",
	"pallet-doughnut/runtime-benchmarks",
	"pallet-maintenance-mode/runtime-benchmarks",
	"pallet-crowdsale/runtime-benchmarks",
	"pallet-migration/runtime-benchmarks",
	"seed-pallet-common/runtime-benchmarks",
]
