[package]
name = "ethy-gadget-rpc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
libsecp256k1 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

ethy-gadget = { workspace = true }
seed-primitives = { workspace = true }
