[package]
name = "pallet-evm-precompiles-erc1155"
version = "2.0.0"
authors = ["The Root Network Team"]
edition = "2018"
repository = "https://github.com/futureversecom/seed"

[dependencies]
pallet-sft = { path = "../../pallet/sft", default-features = false }
pallet-nft = { path = "../../pallet/nft", default-features = false }
pallet-token-approvals = { path = "../../pallet/token-approvals", default-features = false }
seed-pallet-common = { path = "../../pallet/common", default-features = false }
seed-primitives = { path = "../../primitives", default-features = false }

codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
precompile-utils = { path = "../utils", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.13.1", default-features = false, features = ["serialize", "codec"] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Frontier
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.30-TRN" }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum-types/std",
	"scale-info/std",
	"pallet-sft/std",
	"pallet-nft/std",
	"pallet-token-approvals/std",
	"seed-pallet-common/std",
	"fp-evm/std",
	"pallet-evm/std",
	"frame-support/std",
	"frame-system/std",
	"num_enum/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-primitives/std",
]
