[package]
name = "pallet-evm-precompiles-erc20"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
pallet-assets-ext = { workspace = true }
pallet-token-approvals = { workspace = true }
seed-primitives = { workspace = true }

codec = { workspace = true }
num_enum = { workspace = true }
precompile-utils = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"seed-primitives/std",
	"scale-info/std",
	"pallet-assets-ext/std",
	"pallet-assets/std",
	"pallet-token-approvals/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"num_enum/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
