[package]
name = "pallet-evm-precompiles-erc721"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/futureversecom/seed"

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
pallet-nft = { path = "../../pallet/nft", default-features = false }
pallet-token-approvals = { path = "../../pallet/token-approvals", default-features = false }
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.23" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.23" }
precompile-utils = { path = "../utils", default-features = false }
frame-support = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-system = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
seed-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"pallet-nft/std",
	"fp-evm/std",
	"pallet-evm/std",
	"frame-support/std",
	"frame-system/std",
	"num_enum/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"seed-primitives/std",
]
